--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "jest": "22.4.4"
   },
   "dependencies": {
-    "aws-sdk": "^2.247.1",
-    "commander": "^2.15.1",
-    "csv-parse": "^2.4.0"
+    "aws-sdk": "2.247.1",
+    "commander": "2.15.1",
+    "csv-parse": "2.4.0",
+    "faker": "4.1.0"
   },
   "jest": {
     "automock": false,
