--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "y",
+  "name": "dynamo-cli",
   "version": "0.0.1",
   "description": "dynamo operations from command line",
   "main": "index.js",
@@ -21,13 +21,15 @@
     "test:dev": "jest --watchAll"
   },
   "devDependencies": {
-    "jest": "22.4.4"
+    "faker": "4.1.0",
+    "jest": "22.4.4",
+    "stream-array": "1.1.2",
+    "stream-buffers": "3.0.2"
   },
   "dependencies": {
     "aws-sdk": "2.247.1",
     "commander": "2.15.1",
-    "csv-parse": "2.4.0",
-    "faker": "4.1.0"
+    "csv-parse": "2.4.0"
   },
   "jest": {
     "automock": false,
