--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dynamo-cli",
   "version": "0.0.2",
   "description": "dynamo operations from command line",
-  "main": "index.js",
+  "main": "lib/index.js",
   "repository": "git@github.com:kanekotic/dynamo-cli.git",
   "author": "kanekotic <alvarojosepl@gmail.com>",
   "license": "MIT",
