test if i can fail the build in case of not correct deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ deploy:
   skip_cleanup: true
   provider: npm
   email: $NPM_EMAIL
-  api_key: $NPM_TOKEN
+  api_key: "notatoken"
   on:
     tags: true
+after_deploy:
+  - if [[ $? != 0 ]]; travis_terminate 1; fi
