added correct token reference

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ deploy:
   skip_cleanup: true
   provider: npm
   email: $NPM_EMAIL
-  api_key: "notatoken"
+  api_key: $NPM_TOKEN
   on:
     tags: true
 after_deploy:
