--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
     "preversion": "yarn test"
   },
   "devDependencies": {
-    "coveralls": "3.0.2",
-    "faker": "4.1.0",
-    "jest": "23.3.0"
+    "@faker-js/faker": "^7.3.0",
+    "coveralls": "3.1.1",
+    "jest": "28.1.3"
   },
   "dependencies": {
-    "aws-sdk": "2.269.1",
-    "commander": "2.16.0",
-    "csv-parse": "2.5.0"
+    "aws-sdk": "2.1184.0",
+    "commander": "9.4.0",
+    "csv-parse": "5.3.0"
   },
   "jest": {
     "automock": false,
